<resources>
    <string name="app_name">Info Sampah KKN Pandatri</string>
    <string name="video_example">Video example</string>
    <string name="page_title">Page Title</string>
    <string name="page_desc">this is the basic description of the article test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test</string>
    <string name="content_descriptor">content descriptor</string>
    <string name="main_page">Main Page</string>
    <string name="title_1">Jenis-Jenis Sampah</string>
    <string name="title_2">Peluang Bisnis dari Pengolahan Sampah</string>
    <string name="title_3">Jenis Plastik dan Cara Mengurangi Sampah Plastik</string>
    <string name="title_4">Penanganan Limbah</string>
    <string name="title_5">Keuntungan Kompos</string>
    <string name="title_6">Ini Rumah Kita Satu-satunya</string>
    <string name="mountain">mountain</string>
    <string name="article">Artikel</string>
    <string name="art1_txt1">
        <b>1. Sampah Berdasarkan Bentuknya</b>
        \n <b>a. Sampah Padat</b>
\n \t Sampah padat adalah sisa hasil kegiatan industri ataupun aktivitas domestik yang berbentuk padat. Contoh dari sampah padat diantaranya yaitu kertas, plastik, serbuk besi, serbuk kayu, kain, dan lainnya.
        \n <b>b. Sampah Cair</b>
\n \t Sampah cair adalah sisa hasil buangan proses produksi atau aktivitas domestik yang berupa cairan. Sampah cair dapat berupa air beserta bahan-bahan buangan lain yang tercampur (tersuspensi) maupun terlarut dalam air.
        \n \n <b>2. Sampah Berdasarkan Sifatnya</b>
        \n <b>a. Organik</b>
\n \t Secara kimiawi, sampah organik merupakan segala limbah yang mengandung unsur karbon sehingga meliputi tidak hanya limbah dari mahluk hidup seperti kotoran hewan dan manusia, sisa makanan, dan sisa- sisa tumbuhan mati, tetapi juga kertas, plastik, dan karet. Namun, sebagian besar masyarakat mengenal sampah organik sebagai limbah yang hanya berasal dari mahluk hidup (alami) yang mudah membusuk.
        \n <b>b. Anorganik</b>
\n \t Berbeda dengan sampah organik, sampah anorganik meliputi sampah yang tidak mengandung unsur karbon, seperti logam (Contoh:Besi dari mobil bekas atau perkakas, dan aluminium dari kaleng bekas atau peralatan rumah tangga), kaca, dan pupuk anorganik (misalnya yang mengandung unsur nitrogen dan fosfor). Limbah-limbah ini tidak memiliki unsur karbon sehingga tidak dapat diurai oleh mikroorganisme. Namun, sama halnya dengan pengertian sampah organik pada umumnya, sampah anorganik lebih dikenal oleh masyarakat sebagai segala limbah yang tidak dapat atau sulit terurai/busuk secara alami oleh mikroorganisme pengurai (plastik dan karet juga termasuk dalam pengertian ini).
\n <b>c. B3</b>
\n \t Kata B3 merupakan akronim dari bahan beracun dan berbahaya. Oleh karena itu, Sampah B3 dapat diartikan sebagai suatu buangan atau limbah yang sifat dan konsentrasinya mengandung zat yang beracun dan berbahaya sehingga secara langsung maupun tidak langsung dapat merusak lingkungan, mengganggu kesehatan, dan mengancam kelangsungan hidup manusia serta organisme lainya. Contoh dari sampah B3 yang dihasilkan rumah tangga domestik di antaranya bekas pengharum ruangan, pemutih pakaian, deterjen pakaian, pembersih kamar mandi, pembesih kaca/jendela, pembersih lantai, pengkilat kayu, pembersih oven, pembasmi serangga, lem perekat, hair spray, dan batu baterai.
        \n \n <b>3. Sampah Berdasarkan Cara Pembuangannya</b>
        \n <b>a. Mudah Terbakar</b>
    </string>
    <string name="art1_txt2">
        \t Contoh Sampah : Sisa makanan ; Serpihan kayu, plastik, kertas ukuran kecil ; Kain ; Bungkus kotor, Barang-barang kecil, dan lainnya
        \n \t Cara Pembuangan : Dapat dibuang langsung ke tempah sampah
        \n \n <b>b. Tidak Mudah Terbakar</b>
    </string>
    <string name="art1_txt3">
        \t Contoh Sampah : Kaleng, Alat elektronik, Logam, Mainan, dan lainnya
        \n \t Cara Pembuangan : Pisahkan dari yang lain dan bungkus ke dalam satu kantung plastik. (*Bungkus benda tajam seperti pisau dengan kertas sebelum dibuang)
        \n \n <b>c. Plastik</b>
    </string>
    <string name="art1_txt4">
        \t Contoh Sampah : Botol plastic, Wadah plastik, Kantung plastik (*Dalam kondisi bersih)
        \n \t Cara Pembuangan : Pastikan bersih dari kotoran sebelum dibuang - > kumpulkan jadi satu kantung plastik
        \n \n <b>d. Beling atau Kaca</b>
    </string>
    <string name="art1_txt5">
        \t Contoh Sampah : Botol kaca, Gelas kaca, Pecahan beling
        \n \t Cara Pembuangan : Pisahkan dari sampah lain -> Bungkus jadi satu plastik (*Bungkus terlebih dahulu beling pecah dengan kertas / koran dan beri label)
        \n \n <b>e. Kertas dan Karton</b>
    </string>
    <string name="art1_txt6">
        \t Contoh Sampah : Kertas, Koran, Karton, Buku, Majalah, dan semacamnya
        \n \t Cara Pembuangan : Pastikan tidak ternodai -> Bungkus jadi satu plastik / Ikat dengan tali
        \n \n <b>f. Kayu, Daun, Ranting</b>
    </string>
    <string name="art1_txt7">
        \t Contoh Sampah : Botol kaca, Gelas kaca, Pecahan beling
        \n \t Cara Pembuangan : Kumpulkan ke tempat yang sudah ditentukan (Dekat Bak Sampah dan semacamnya)
        \n \n <b>g. Ukuran Besar</b>
    </string>
    <string name="art1_txt8">
        \t Contoh Sampah : Spring bed, kursi, lemari, meja, dan semacamnya
        \n \t Cara Pembuangan : Harap hubungi terlebih dahulu petugas PTS sebelum pembuangan / Jual ke Toko Barang Bekas
        \n \n <b>h. Berbahaya</b>
    </string>
    <string name="art1_txt9">
        \t Contoh Sampah : Tabung Gas, Korek, Petasan, dan semacamnya
        \n \t Cara Pembuangan : Pisahkan dari sampah lainnya -> jadikan satu kantung plastik -> jangan lupa beri tanda seperti label barang berbahaya di plastik agar petugas PTS tahu
    </string>
    <string name="art2_txt1">
        \t Sampah merupakan salah satu permasalahan terbesar di Indonesia. Pada tahun 2020 Indonesia menghasilkan sampah sebanyak 67,8 juta ton artinya sampah yang diproduksi adalah sebanyak 185.753 ton setiap harinya. Penanganan sampah di Indonesia saat ini masih jauh dari kata cukup. Banyak sampah yang hanya dibakar, mengalir di selokan, sungai, bahkan di pantai dan lautan yang mencemari dan merusak lingkungan. Faktanya, penyumbang terbesar dari jutaan ton sampah tersebut adalah jenis sampah rumah tangga.
        \n \t Di balik fakta tersebut, sampah sebenarnya memiliki peluang bisnis untuk dapat dimanfaatkan dan dikelola. Sampah yang dihasilkan oleh rumah tangga dapat disalurkan ke bank sampah atau pengepul untuk  didaur ulang. Penyaluran sampah ini tentunya setidaknya kita dapat berkontribusi untuk memilah sampah yang kita hasilkan sehari-harinya. Selain itu, pengolahan sampah sebenarnya juga  memiliki peluang bisnis yang baik. Berikut adalah beberapa alternatif bisnis pengelolaan sampah yang dapat dilakukan:
        \n \n <b>1. Sampah Organik menjadi Pupuk Kompos</b>
    </string>
    <string name="art2_txt2">
        \n \t Pupuk kompos dari sisa makanan membutuhkan bahan dasar yang murah meriah, bahkan gratis. Selain itu, pupuk kompos memiliki peluang dari segi pemasaran karena pangsa pasar yang besar. Peluang besar ini khususnya ada pada daerah-daerah yang memiliki lahan pertanian atau perkebunan yang luas. Selain itu, pupuk kompos juga dapat dipasarkan pada para pecinta tanaman hias.
        \n \t Informasi lebih lanjut: https://bisnisukm.com/peluang-bisnis-mengolah-sampah-jadi-pupuk-kompos.html
        \n \n <b>2.	Sampah Organik menjadi Pakan Ikan</b>
    </string>
    <string name="art2_txt3">
        \n \t Sampah organik yang ada dapat diolah menjadi maggot. Maggot merupakan jenis belatung yang mengandung protein tinggi sehingga baik untuk dijadikan pakan ikan. Dengan pakan alami yang diproduksi sendiri, ikan yang dihasilkan pun merupakan ikan yang sehat dan higienis yang memiliki peluang untuk menembus pasar global. Jenis ikan yang dibudidaya adalah ikan mas, nila, koi, dan juga ikan gurame. Ikan-ikan ini dapat dipesan baik melalui WhatsApp maupun telepon. Di masa pandemi saat ini, pemasaran ikan yang dibudidayakan secara online melalui berbagai platform belanja online.
        \n \t Informasi lebih lanjut:
        \t https://ekonomi.bisnis.com/read/20200102/99/1186488/sampah-organik-ini-bisa-jadi-pakan-ikan-berprotein-tinggi
        \t https://bosternak.com/ternak-maggot-bsf-modern-untuk-pemula-agar-tidak-salah-langkah
        \n \n <b>3.	Daur Ulang Sampah Plastik PETE</b>
    </string>
    <string name="art2_txt4">
        \n \t Salah satu bisnis daur ulang sampah yang banyak dilakukan hingga saat ini adalah daur ulang sampah plastik khususnya plastik jenis PETE (polyethylene terephthalate). Jenis plastik PETE memiliki nilai ekonomi yang tinggi dibandingkan dengan jenis plastik lain karena dapat  didaur ulang menjadi bahan baku kembali. Plastik PETE seringkali digunakan untuk kemasan berbagai makanan dan minuman. Jenis plastik ini hanya dapat digunakan sekali saja sehingga jumlahnya pun sangat banyak.
        \n \t Informasi lebih lanjut: https://klikhijau.com/read/bisnis-daur-ulang-sampah-plastik-semakin-menggiurkan/
        \n \n <b>4. Kerajinan Sampah Anorganik</b>
    </string>
    <string name="art2_txt5">
        \n \t Kreativitas merupakan salah satu modal untuk melakukan bisnis. Kerajinan dari sampah anorganik juga memiliki kelebihan karena dibuat dari bahan baku yang jauh lebih murah dan tidak dapat rusak karena membusuk. Pangsa pasarnya juga luas, terlebih lagi untuk kota wisata seperti Yogyakarta. Salah satu contohnya adalah pengrajin daur ulang sampah anorganik dari Dusun Triharjo yaitu Umi Maesyaroh. Ia mendaur ulang berbagai sampah anorganik seperti kardus bekas, botol minuman, dan juga sedotan bekas menjadi kerajinan yang cantik.
        \n \t Informasi lebih lanjut: https://mediacenter.slemankab.go.id/limbah-botol-plastik-mampu-disulapnya-jadi-bunga-nan-cantik/
        \n \n <b>5.	Daur Ulang Sampah Anorganik menjadi Material Bangunan</b>
    </string>
    <string name="mudah_terbakar">mudah terbakar</string>
    <string name="tidak_mudah_terbakar">tidak mudah terbakar</string>
    <string name="plastik">plastik</string>
    <string name="kaca">kaca</string>
    <string name="kertas">kertas</string>
    <string name="daun">daun</string>
    <string name="besar">sampah besar</string>
    <string name="banner">banner image</string>
    <string name="artikel_caca">artikel caca</string>
    <string name="about_txt">
        Aplikasi ini dibuat dalam rangka pengabdian KKN-PPM UGM 2021 Unit YO-095 di Lokasi Padukuhan Mancasan-Kleben, Sleman, Daerah Istimewa Yogyakarta.
        \n\nUnit KKN kami membahas tema sampah, dan aplikasi ini menyediakan artikel-artikel yang menyimpan informasi berguna tentang sampah, mulai dari jenis hingga pemanfaatan sampah.
    </string>
    <string name="logo_kkn">logo KKN</string>
    <string name="logo_ugm">logo UGM</string>
    <string name="kkn_ugm">KKN-PPM UGM 2021</string>
</resources>