<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/main_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/about_txt"
        android:textColor="@color/dark_gray"/>

    <ImageView
        android:id="@+id/logo_kkn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo_kkn"
        app:layout_constraintBottom_toTopOf="@id/bottom_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/logo_kkn"/>

    <ImageView
        android:id="@+id/logo_ugm"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:padding="8dp"
        android:src="@drawable/logo_ugm"
        app:layout_constraintBottom_toTopOf="@id/bottom_text"
        app:layout_constraintEnd_toStartOf="@id/logo_kkn"
        android:contentDescription="@string/logo_ugm"/>

    <TextView
        android:id="@+id/bottom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/kkn_ugm"
        android:textColor="@color/gray"/>

</androidx.constraintlayout.widget.ConstraintLayout>