<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:contentScrim="@color/primary"
            app:title="@string/title_1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/thumb1"
                android:scaleType="centerCrop"
                android:contentDescription="@string/banner" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:context=".pages.PageOneActivity">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/title_1"
                android:textStyle="bold"
                android:textSize="24sp"
                android:textColor="@color/dark_gray"/>

            <TextView
                android:id="@+id/description1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt1"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/pic1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/r_pic1"
                app:layout_constraintTop_toBottomOf="@id/description1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/mudah_terbakar"/>

            <ImageView
                android:id="@+id/pic2"
                android:layout_width="wrap_content"
                android:layout_height="220dp"
                android:src="@drawable/r_pic2"
                app:layout_constraintTop_toBottomOf="@id/pic1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/mudah_terbakar"/>

            <TextView
                android:id="@+id/description2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pic2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt2"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/pic3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/r_pic3"
                app:layout_constraintTop_toBottomOf="@id/description2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/tidak_mudah_terbakar"/>

            <ImageView
                android:id="@+id/pic4"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/r_pic4"
                app:layout_constraintTop_toBottomOf="@id/pic3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/tidak_mudah_terbakar"/>

            <TextView
                android:id="@+id/description3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pic4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt3"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/pic5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/r_pic5"
                app:layout_constraintTop_toBottomOf="@id/description3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/plastik"/>

            <ImageView
                android:id="@+id/pic6"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/r_pic6"
                app:layout_constraintTop_toBottomOf="@id/pic5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/plastik"/>

            <TextView
                android:id="@+id/description4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pic6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt4"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/pic7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/r_pic7"
                app:layout_constraintTop_toBottomOf="@id/description4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/kaca"/>

            <ImageView
                android:id="@+id/pic8"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/r_pic8"
                app:layout_constraintTop_toBottomOf="@id/pic7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/kaca"/>

            <TextView
                android:id="@+id/description5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pic8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt5"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/pic9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/r_pic9"
                app:layout_constraintTop_toBottomOf="@id/description5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/kertas"/>

            <ImageView
                android:id="@+id/pic10"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/r_pic10"
                app:layout_constraintTop_toBottomOf="@id/pic9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/kertas"/>

            <TextView
                android:id="@+id/description6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pic10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt6"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/pic11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/r_pic11"
                app:layout_constraintTop_toBottomOf="@id/description6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/daun"/>

            <TextView
                android:id="@+id/description7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pic11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt7"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/pic12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/r_pic12"
                app:layout_constraintTop_toBottomOf="@id/description7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/besar"/>

            <ImageView
                android:id="@+id/pic13"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/r_pic13"
                app:layout_constraintTop_toBottomOf="@id/pic12"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/besar"/>

            <TextView
                android:id="@+id/description8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pic13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt8"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/pic14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/r_pic14"
                app:layout_constraintTop_toBottomOf="@id/description8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/besar"/>

            <ImageView
                android:id="@+id/pic15"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:src="@drawable/r_pic15"
                app:layout_constraintTop_toBottomOf="@id/pic14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/besar"/>

            <TextView
                android:id="@+id/description9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pic15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/art1_txt9"
                android:textColor="@color/gray"
                android:textSize="14sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

